# Riordinato

./: .gitignore  README.md  cli_docs.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
riordinato/: Riordinato.py  __init__.py  cli.py  cli_utils.py  exceptions.py  files.py  my_files.py
riordinato.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  test_exceptions.py  test_prefix.py  test_riordinato.py
