[tool.poetry]
name = "riordinato"
version = "1.7.0"
description = "organize your files with prefixes"
authors = ["Dan- <misternutel@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["organize", "riordinato", "prefixes", "dir"]
homepage = "https://github.com/DAN-pix/Riordinato"
repository = "https://github.com/DAN-pix/Riordinato"

[tool.poetry.scripts]
riordinato = "riordinato.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.5.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
